add fav city html

--- a/week01/favorite-city.html
+++ b/week01/favorite-city.html
@@ -9,9 +9,9 @@
 
 <body>
     <h1>My Favorite City</h1>
-    <p>My favorite city is Spanish Fork, Utah. My family and I moved here when I was a freshman in college. It is in
-        driving distance to the college I went to, UVU. It also has many places to hike and go on walks and enjoy
-        nature.</p>
+    <p>My favorite city is Spanish Fork, Utah. My family and I moved here when I was a freshman in college. It has many
+        places to hike and go walking. It is also close enough to college so my brothers and I could continue higher
+        education while still being close to family.</p>
     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cd/City_Offices.jpg/250px-City_Offices.jpg"
         alt="Spanish Fork, UT">
 </body>
