commit four plus one

--- a/week01/favorite-city.html
+++ b/week01/favorite-city.html
@@ -13,7 +13,7 @@
         places to hike and go walking. It is also close enough to college so my brothers and I could continue higher
         education while still being close to family.</p>
     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cd/City_Offices.jpg/250px-City_Offices.jpg"
-        alt="Spanish Fork, UT">
+        alt="Spanish Fork, UT" width="400">
 </body>
 
 </html>
