First Main Menu

--- a/index.html
+++ b/index.html
@@ -1,14 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WDD 130 | Personal Homepage</title>
+    <title>Kylene Samantha Hunter WDD 130 | Personal Homepage</title>
 </head>
-<body>
-    <h1>Welcome to WDD 130.</h1>
-    <p>This page will become your homepage for the course. You will remove this text and replace it with your own personal details.</p>
 
-    <img src="images/salt-lake-temple.jpg" alt="The Salt Lake Temple.">
+<body>
+    <header>
+        <nav>
+            <a href="#">Home</a>
+            <a href="wwr/">Rafting Website</a>
+        </nav>
+    </header>
+    <main>
+        <h1>Kylene Samantha Hunter | WDD 130</h1>
+        <img src="images/profile.jpg" alt="Kylene Hunter" width="200">
+        <p>I live in Spanish Fork, Utah. I love to do arts and crafts, including crocheting, drawing, and beading. My
+            favorite color is purple, and I have two brothers and one sister.</p>
+    </main>
+    <footer>
+        <p>©2025 🪻 Kylene Hunter 🪻 Utah </p>
+    </footer>
 </body>
+
 </html>
