--- a/week02/basic-layout.html
+++ b/week02/basic-layout.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Basic HTML Structure</title>
     <meta name="description" content="A basic HTML structure example using semantic HTML elements">
     <meta name="author" content="Kylene Hunter">
