Week 2 Activity 1 Attempt 3

--- a/week02/basic-layout.html
+++ b/week02/basic-layout.html
@@ -25,7 +25,10 @@
             <h2>Heading</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, optio?</p>
         </section>
-        <section></section>
+        <section>
+            <h2>Heading</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, optio?</p>
+        </section>
     </main>
     <aside>
         <img src="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/aba-nigeria/800x1280/aba-nigeria-temple-lds-248714-wallpaper.jpg"
