--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kylene Samantha Hunter | WDD 130</title>
+    <meta name="description"
+        content="Kylene Hunter's Home page for WDD 130.  Currently consists of brief information about me and my home state of Utah.">
+    <meta name="author" content="Kylene Hunter">
+
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 
@@ -21,6 +25,14 @@
         <p>I live in Spanish Fork, Utah. I love to do arts and crafts, including crocheting, drawing, and beading. My
             favorite color is purple, and I have two brothers and one sister.</p>
     </main>
+    <aside>
+        <h2>Utah</h2>
+        <img src="images/my-utah-photo.jpg" alt="Tabernacle">
+        <p>Utah is one of the 50 states of the United States of America. The state capital is Salt Lake City, which is
+            also the location of the Salt Lake Temple. The temple is currently going through rennovations, but it will
+            have an open house in 2027. Another building in Salt Lake City is the Conference Center where this picture
+            was taken.</p>
+    </aside>
     <footer>
         <p>©2025 🪻 Kylene Hunter 🪻 Utah </p>
     </footer>
