--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Kylene Samantha Hunter | WDD 130</title>
     <meta name="description"
         content="Kylene Hunter's Home page for WDD 130.  Currently consists of brief information about me and my home state of Utah.">
-    <meta name="author" content="Your name">
+    <meta name="author" content="Kylene Hunter">
 
     <link rel="stylesheet" href="styles/styles.css">
 </head>
