--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </main>
     <aside>
         <h2>Utah</h2>
-        <img src="images/my-utah-photo.jpg" alt="Tabernacle">
+        <img src="images/my-utah-photo.jpg" alt="Inside Conference Center in Salt Lake City, Utah, USA">
         <p>Utah is one of the 50 states of the United States of America. The state capital is Salt Lake City, which is
             also the location of the Salt Lake Temple. The temple is currently going through rennovations, but it will
             have an open house in 2027. Another building in Salt Lake City is the Conference Center where this picture
