--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!--November 6, 2025-->
 <!DOCTYPE html>
 <html lang="en-US">
 
@@ -10,6 +11,9 @@
     <meta name="author" content="Kylene Hunter">
 
     <link rel="stylesheet" href="styles/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -17,15 +21,33 @@
         <nav>
             <a href="#">Home</a>
             <a href="wwr/">Rafting Website</a>
+            <a href="https://www.linkedin.com/in/kylene-hunter">Profile</a>
+            <a href="https://www.facebook.com/">Facebook</a>
         </nav>
     </header>
     <main>
         <h1>Kylene Samantha Hunter | WDD 130</h1>
         <img src="images/profile.jpg" alt="Kylene Hunter" width="200">
-        <p>I live in Spanish Fork, Utah. I love to do arts and crafts, including crocheting, drawing, and beading. My
-            favorite color is purple, and I have two brothers and one sister.</p>
+        <p>My name is Kylene Hunter. I live in Spanish Fork, Utah. I am a member of the Church of Jesus Christ of
+            Latter-day Saints. My favorite hobby is arts and crafts. I've been drawing ever since I was little kid, I
+            learned to crochet while I was in Young Woments, and I learned beading sometime after that.
+            my favorite color is purple, and I have two brothers and one sister. I enjoy going on hikes with my family.
+            I'm currently working as a grocery stocker, which I enjoy because I am organizing and refilling shelves with
+            products that people buy. I became a student at BYU Pathway because while I enjoy my job, I also want to
+            look for something I would want to do long-term that can allow me to support myself when needed.
+        </p>
+
+        <ul class="box indent">
+            <li><a href="https://www.churchofjesuschrist.org/temples/details/payson-utah-temple?lang=eng"
+                    target="_blank">Payson Utah Temple</a></li>
+            <li><a href="https://www.churchofjesuschrist.org/temples/details/salt-lake-temple?lang=eng"
+                    target="_blank">Salt Lake City Utah Temple</a></li>
+            <li><a href="https://www.churchofjesuschrist.org/temples/details/los-angeles-california-temple?lang=eng"
+                    target="_blank">Los Angeles California Temple</a>
+            </li>
+        </ul>
     </main>
-    <aside>
+    <aside class="box">
         <h2>Utah</h2>
         <img src="images/my-utah-photo.jpg" alt="Inside Conference Center in Salt Lake City, Utah, USA">
         <p>Utah is one of the 50 states of the United States of America. The state capital is Salt Lake City, which is
