--- a/index.html
+++ b/index.html
@@ -28,9 +28,12 @@
     <main>
         <h1>Kylene Samantha Hunter | WDD 130</h1>
         <img src="images/profile.jpg" alt="Kylene Hunter" width="200">
-        <p>My name is Kylene Hunter. I live in Spanish Fork, Utah. I am a member of the Church of Jesus Christ of
-            Latter-day Saints. My favorite hobby is arts and crafts. I've been drawing ever since I was little kid, I
-            learned to crochet while I was in Young Woments, and I learned beading sometime after that.
+        <p>My name is Kylene Hunter. I am a member of the Church of Jesus Christ of
+            Latter-day Saints. I live in Spanish Fork, Utah. I was born in Provo, Utah, though sometime after that my
+            family moved to California where I lived until I was in 3rd grade. We moved back to Utah and lived in
+            Stansbury Park for 9 years before we moved to Spanish Fork Utah, where we have lived ever since then. My
+            favorite hobby is arts and crafts. I've been drawing ever since I was little kid, I
+            learned to crochet while I was in Young Womens, and I learned beading sometime after that.
             my favorite color is purple, and I have two brothers and one sister. I enjoy going on hikes with my family.
             I'm currently working as a grocery stocker, which I enjoy because I am organizing and refilling shelves with
             products that people buy. I became a student at BYU Pathway because while I enjoy my job, I also want to
