--- a/wwr/about.html
+++ b/wwr/about.html
@@ -4,16 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Whitewater Rafting</title>
+    <title>About Us Whitewater Rafting</title>
     <meta name="description"
-        content="Come enjoy the experience of traveling down rivers relying solely on teamwork and a non-motorized raft.  The Whitewater Rafting Site Project is designed to provide people a chance to plan their own whitewater rafting in a way that will provide an exciting yet safe experience.  Tools and experienced guides are provided as an extra precaution.">
-    <meta name="author" content="Kylene Samantha Hunter">
+        content="Plan and enjoy the experience of rafting downstream with your friends and family!">
+    <meta name="author" content="Kylene Hunter">
     <link rel="stylesheet" href="styles/rafting.css">
 </head>
 
 <body>
     <header>
-        <img src="images/logo.jpg" alt="Logo">
+        <img src="images/logo.jpg" alt="whitewater rafting logo">
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -39,11 +39,11 @@
                 illum. Laboriosam, praesentium nulla!</p>
         </section>
         <section>
-            <h2>Adventure Awaits You</h2>
+            <h2>Adventure Awaits You!</h2>
         </section>
     </main>
     <footer>
-        <p>&copy 2025 Whitewater Rafting Kylene Hunter</p>
+        <p>&copy;2025 🚣‍♂️ Whitewater Rafting 🚣‍♀️ Kylene Hunter</p>
         <nav class="socialmedia">
             <a href="https://facebook.com">
                 <img src="images/facebook-optimized.svg" alt="Facebook Icon" width="150">
@@ -52,7 +52,7 @@
                 <img src="images/linkedin-square-optimized.svg" alt="LinkedIn Icon" width="150">
             </a>
             <a href="https://instagram.com">
-                <img src="images/instagram-square-optimized.svg" alt="Instagram" width="150">
+                <img src="images/instagram-square-optimized.svg" alt="Instagram Icon" width="150">
             </a>
         </nav>
     </footer>
