--- a/wwr/about.html
+++ b/wwr/about.html
@@ -25,11 +25,12 @@
     </header>
     <main>
         <div class="hero">
-            <img src="images/raftingbanner-optimized.jpg" alt="Rafting for Families">
+            <img src="images/largercrop-optimized.jpg" alt="Rafting for Families">
             <h1>Whitewater Rafting</h1>
             <article>
                 <img src="images/happy-woman-optimized.jpg" alt="Happy Rower">
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eum, nemo?</p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eum, nemo? Lorem ipsum dolor, sit amet
+                    consectetur adipisicing elit. Temporibus, possimus corrupti est excepturi quidem aut?</p>
             </article>
         </div>
         <section>
