--- a/index.html
+++ b/index.html
@@ -25,39 +25,47 @@
             <a href="https://www.facebook.com/">Facebook</a>
         </nav>
     </header>
-    <main>
-        <h1>Kylene Samantha Hunter | WDD 130</h1>
-        <img src="images/profile.jpg" alt="Kylene Hunter" width="200">
-        <p>My name is Kylene Hunter. I am a member of the Church of Jesus Christ of
-            Latter-day Saints. I live in Spanish Fork, Utah. I was born in Provo, Utah, though sometime after that my
-            family moved to California where I lived until I was in 3rd grade. We moved back to Utah and lived in
-            Stansbury Park for 9 years before we moved to Spanish Fork Utah, where we have lived ever since then. My
-            favorite hobby is arts and crafts. I've been drawing ever since I was little kid, I
-            learned to crochet while I was in Young Womens, and I learned beading sometime after that.
-            my favorite color is purple, and I have two brothers and one sister. I enjoy going on hikes with my family.
-            I'm currently working as a grocery stocker, which I enjoy because I am organizing and refilling shelves with
-            products that people buy. I became a student at BYU Pathway because while I enjoy my job, I also want to
-            look for something I would want to do long-term that can allow me to support myself when needed.
-        </p>
+    <div class="grid">
+        <main>
+            <h1>Kylene Samantha Hunter | WDD 130</h1>
+            <img src="images/profile.jpg" alt="Kylene Hunter" width="200">
+            <p>My name is Kylene Hunter. I am a member of the Church of Jesus Christ of
+                Latter-day Saints. I live in Spanish Fork, Utah. I was born in Provo, Utah, though sometime after that
+                my
+                family moved to California where I lived until I was in 3rd grade. We moved back to Utah and lived in
+                Stansbury Park for 9 years before we moved to Spanish Fork Utah, where we have lived ever since then. My
+                favorite hobby is arts and crafts. I've been drawing ever since I was little kid, I
+                learned to crochet while I was in Young Womens, and I learned beading sometime after that.
+                my favorite color is purple, and I have two brothers and one sister. I enjoy going on hikes with my
+                family.
+                I'm currently working as a grocery stocker, which I enjoy because I am organizing and refilling shelves
+                with
+                products that people buy. I became a student at BYU Pathway because while I enjoy my job, I also want to
+                look for something I would want to do long-term that can allow me to support myself when needed.
+            </p>
 
-        <ul class="box indent">
-            <li><a href="https://www.churchofjesuschrist.org/temples/details/payson-utah-temple?lang=eng"
-                    target="_blank">Payson Utah Temple</a></li>
-            <li><a href="https://www.churchofjesuschrist.org/temples/details/salt-lake-temple?lang=eng"
-                    target="_blank">Salt Lake City Utah Temple</a></li>
-            <li><a href="https://www.churchofjesuschrist.org/temples/details/los-angeles-california-temple?lang=eng"
-                    target="_blank">Los Angeles California Temple</a>
-            </li>
-        </ul>
-    </main>
-    <aside class="box">
-        <h2>Utah</h2>
-        <img src="images/my-utah-photo.jpg" alt="Inside Conference Center in Salt Lake City, Utah, USA">
-        <p>Utah is one of the 50 states of the United States of America. The state capital is Salt Lake City, which is
-            also the location of the Salt Lake Temple. The temple is currently going through rennovations, but it will
-            have an open house in 2027. Another building in Salt Lake City is the Conference Center where this picture
-            was taken.</p>
-    </aside>
+            <ul class="box indent">
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/payson-utah-temple?lang=eng"
+                        target="_blank">Payson Utah Temple</a></li>
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/salt-lake-temple?lang=eng"
+                        target="_blank">Salt Lake City Utah Temple</a></li>
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/los-angeles-california-temple?lang=eng"
+                        target="_blank">Los Angeles California Temple</a>
+                </li>
+            </ul>
+        </main>
+        <aside class="box">
+            <h2>Utah</h2>
+            <img src="images/my-utah-photo.jpg" alt="Inside Conference Center in Salt Lake City, Utah, USA">
+            <p>Utah is one of the 50 states of the United States of America. The state capital is Salt Lake City, which
+                is
+                also the location of the Salt Lake Temple. The temple is currently going through rennovations, but it
+                will
+                have an open house in 2027. Another building in Salt Lake City is the Conference Center where this
+                picture
+                was taken.</p>
+        </aside>
+    </div>
     <footer>
         <p>©2025 🪻 Kylene Hunter 🪻 Utah </p>
     </footer>
