--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </header>
     <div class="grid">
         <main>
-            <h1>Kylene Samantha Hunter | WDD 130</h1>
+            <h1>Kylene Hunter | WDD 130</h1>
             <img src="images/profile.jpg" alt="Kylene Hunter" width="200">
             <p>My name is Kylene Hunter. I am a member of the Church of Jesus Christ of
                 Latter-day Saints. I live in Spanish Fork, Utah. I was born in Provo, Utah, though sometime after that
