--- a/wwr/about.html
+++ b/wwr/about.html
@@ -14,8 +14,9 @@
 <body>
     <header>
         <img src="images/logo.jpg" alt="whitewater rafting logo">
+        <div id="blank"></div>
         <nav>
-            <ul>
+            <ul class="navigation">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="trips.html">Trips</a></li>
@@ -41,19 +42,32 @@
         </section>
         <section>
             <h2>Adventure Awaits You!</h2>
+            <figure>
+                <img src="images/happy-woman-optimized.jpg" alt="test">
+                <figcaption>test</figcaption>
+                <img src="images/happy-woman-optimized.jpg" alt="test">
+                <figcaption>test</figcaption>
+                <img src="images/happy-woman-optimized.jpg" alt="test">
+                <figcaption>test</figcaption>
+                <img src="images/happy-woman-optimized.jpg" alt="test">
+                <figcaption>test</figcaption>
+                <img src="images/happy-woman-optimized.jpg" alt="test">
+                <figcaption>test</figcaption>
+
+            </figure>
         </section>
     </main>
     <footer>
         <p>&copy;2025 🚣‍♂️ Whitewater Rafting 🚣‍♀️ Kylene Hunter</p>
         <nav class="socialmedia">
             <a href="https://facebook.com">
-                <img src="images/facebook-optimized.svg" alt="Facebook Icon" width="150">
+                <img src="images/facebook-optimized.svg" alt="Facebook Icon" width="50">
             </a>
             <a href="https://linkedin.com">
-                <img src="images/linkedin-square-optimized.svg" alt="LinkedIn Icon" width="150">
+                <img src="images/linkedin-square-optimized.svg" alt="LinkedIn Icon" width="50">
             </a>
             <a href="https://instagram.com">
-                <img src="images/instagram-square-optimized.svg" alt="Instagram Icon" width="150">
+                <img src="images/instagram-square-optimized.svg" alt="Instagram Icon" width="50">
             </a>
         </nav>
     </footer>
