--- a/wwr/about.html
+++ b/wwr/about.html
@@ -43,16 +43,16 @@
         <section>
             <h2>Adventure Awaits You!</h2>
             <figure>
-                <img src="images/happy-woman-optimized.jpg" alt="test">
-                <figcaption>test</figcaption>
-                <img src="images/happy-woman-optimized.jpg" alt="test">
-                <figcaption>test</figcaption>
-                <img src="images/happy-woman-optimized.jpg" alt="test">
-                <figcaption>test</figcaption>
-                <img src="images/happy-woman-optimized.jpg" alt="test">
-                <figcaption>test</figcaption>
-                <img src="images/happy-woman-optimized.jpg" alt="test">
-                <figcaption>test</figcaption>
+                <img src="images/image-one-square-optimized.jpg" alt="test" width="100">
+                <figcaption>Forest Flowing</figcaption>
+                <img src="images/image-two-square-optimized.jpg" alt="test" width="100">
+                <figcaption>Grassland Rapids</figcaption>
+                <img src="images/image-three-square-optimized.jpg" alt="test" width="100">
+                <figcaption>Mountain Cruising</figcaption>
+                <img src="images/image-four-square-optimized.jpg" alt="test" width="100">
+                <figcaption>Rock Sliding</figcaption>
+                <img src="images/image-five-square-optimized.jpg" alt="test" width="100">
+                <figcaption>Waterfall Jumping</figcaption>
 
             </figure>
         </section>
