--- a/wwr/about.html
+++ b/wwr/about.html
@@ -36,25 +36,41 @@
         </div>
         <section>
             <h2>History</h2>
+            <img src="images/history-opt.jpg" alt="forest" width="200">
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Qui, dolor! Quos tempore minima possimus,
                 necessitatibus similique odit reprehenderit fugiat quasi laborum iste nostrum adipisci. Ipsam, ad
                 illum. Laboriosam, praesentium nulla!</p>
         </section>
         <section>
-            <h2>Adventure Awaits You!</h2>
-            <figure>
-                <img src="images/image-one-square-optimized.jpg" alt="test" width="100">
-                <figcaption>Forest Flowing</figcaption>
-                <img src="images/image-two-square-optimized.jpg" alt="test" width="100">
-                <figcaption>Grassland Rapids</figcaption>
-                <img src="images/image-three-square-optimized.jpg" alt="test" width="100">
-                <figcaption>Mountain Cruising</figcaption>
-                <img src="images/image-four-square-optimized.jpg" alt="test" width="100">
-                <figcaption>Rock Sliding</figcaption>
-                <img src="images/image-five-square-optimized.jpg" alt="test" width="100">
-                <figcaption>Waterfall Jumping</figcaption>
 
-            </figure>
+            <h2>Adventure Awaits You!</h2>
+            <div class="figure">
+                <figure>
+                    <img src="images/img-one-sq-opt.jpg" alt="test" width="100">
+                    <figcaption>Forest Flowing</figcaption>
+                </figure>
+
+                <figure>
+                    <img src="images/img-two-sq-opt.jpg" alt="test" width="100">
+                    <figcaption>Grassland Rapids</figcaption>
+                </figure>
+
+                <figure>
+                    <img src="images/img-three-sq-opt.jpg" alt="test" width="100">
+                    <figcaption>Mountain Cruising</figcaption>
+                </figure>
+
+                <figure>
+                    <img src="images/img-four-sq-opt.jpg" alt="test" width="100">
+                    <figcaption>Rock Sliding</figcaption>
+                </figure>
+
+                <figure>
+                    <img src="images/img-five-sq-opt.jpg" alt="test" width="100">
+                    <figcaption>Waterfall Jumping</figcaption>
+                </figure>
+            </div>
+
         </section>
     </main>
     <footer>
