--- a/wwr/about.html
+++ b/wwr/about.html
@@ -34,7 +34,7 @@
                     consectetur adipisicing elit. Temporibus, possimus corrupti est excepturi quidem aut?</p>
             </article>
         </div>
-        <section>
+        <section class="history">
             <h2>History</h2>
             <img src="images/history-opt.jpg" alt="forest" width="200">
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Qui, dolor! Quos tempore minima possimus,
