--- a/wwr/about.html
+++ b/wwr/about.html
@@ -34,12 +34,17 @@
                     consectetur adipisicing elit. Temporibus, possimus corrupti est excepturi quidem aut?</p>
             </article>
         </div>
-        <section class="history">
+        <section>
             <h2>History</h2>
-            <img src="images/history-opt.jpg" alt="forest" width="200">
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Qui, dolor! Quos tempore minima possimus,
-                necessitatibus similique odit reprehenderit fugiat quasi laborum iste nostrum adipisci. Ipsam, ad
-                illum. Laboriosam, praesentium nulla!</p>
+            <div class="history-container">
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Qui, dolor! Quos tempore minima possimus,
+                    necessitatibus similique odit reprehenderit fugiat quasi laborum iste nostrum adipisci. Ipsam, ad
+                    illum. Laboriosam, praesentium!</p>
+                <img src="images/history-opt.jpg" alt="forest" width="30%">
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Qui, dolor! Quos tempore minima possimus,
+                    necessitatibus similique odit reprehenderit fugiat quasi laborum iste nostrum adipisci. Ipsam, ad
+                    illum. Laboriosam, praesentium!</p>
+            </div>
         </section>
         <section>
 
@@ -73,7 +78,7 @@
 
         </section>
     </main>
-    <footer>
+    <footer class="footer">
         <p>&copy;2025 🚣‍♂️ Whitewater Rafting 🚣‍♀️ Kylene Hunter</p>
         <nav class="socialmedia">
             <a href="https://facebook.com">
