--- a/wwr/about.html
+++ b/wwr/about.html
@@ -51,27 +51,27 @@
             <h2>Adventure Awaits You!</h2>
             <div class="figure">
                 <figure>
-                    <img src="images/img-one-sq-opt.jpg" alt="test" width="100">
+                    <img src="images/img-one-sq-opt.jpg" alt="image-one" width="100">
                     <figcaption>Forest Flowing</figcaption>
                 </figure>
 
                 <figure>
-                    <img src="images/img-two-sq-opt.jpg" alt="test" width="100">
+                    <img src="images/img-two-sq-opt.jpg" alt="image-two" width="100">
                     <figcaption>Grassland Rapids</figcaption>
                 </figure>
 
                 <figure>
-                    <img src="images/img-three-sq-opt.jpg" alt="test" width="100">
+                    <img src="images/img-three-sq-opt.jpg" alt="image-three" width="100">
                     <figcaption>Mountain Cruising</figcaption>
                 </figure>
 
                 <figure>
-                    <img src="images/img-four-sq-opt.jpg" alt="test" width="100">
+                    <img src="images/img-four-sq-opt.jpg" alt="image-four" width="100">
                     <figcaption>Rock Sliding</figcaption>
                 </figure>
 
                 <figure>
-                    <img src="images/img-five-sq-opt.jpg" alt="test" width="100">
+                    <img src="images/img-five-sq-opt.jpg" alt="image-5" width="100">
                     <figcaption>Waterfall Jumping</figcaption>
                 </figure>
             </div>
