--- a/wwr/about.html
+++ b/wwr/about.html
@@ -40,7 +40,7 @@
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Qui, dolor! Quos tempore minima possimus,
                     necessitatibus similique odit reprehenderit fugiat quasi laborum iste nostrum adipisci. Ipsam, ad
                     illum. Laboriosam, praesentium!</p>
-                <img src="images/history-opt.jpg" alt="forest" width="30%">
+                <img src="images/history-opt.jpg" alt="forest">
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Qui, dolor! Quos tempore minima possimus,
                     necessitatibus similique odit reprehenderit fugiat quasi laborum iste nostrum adipisci. Ipsam, ad
                     illum. Laboriosam, praesentium!</p>
