--- a/wwr/about.html
+++ b/wwr/about.html
@@ -52,17 +52,17 @@
             <div class="figure">
                 <figure>
                     <img src="images/img-one-sq-opt.jpg" alt="image-one" width="100">
-                    <figcaption>Forest Flowing</figcaption>
+                    <figcaption>Forest Flow</figcaption>
                 </figure>
 
                 <figure>
                     <img src="images/img-two-sq-opt.jpg" alt="image-two" width="100">
-                    <figcaption>Grassland Rapids</figcaption>
+                    <figcaption>Grass Rapids</figcaption>
                 </figure>
 
                 <figure>
                     <img src="images/img-three-sq-opt.jpg" alt="image-three" width="100">
-                    <figcaption>Mountain Cruising</figcaption>
+                    <figcaption>Mount Cruise</figcaption>
                 </figure>
 
                 <figure>
@@ -72,7 +72,7 @@
 
                 <figure>
                     <img src="images/img-five-sq-opt.jpg" alt="image-5" width="100">
-                    <figcaption>Waterfall Jumping</figcaption>
+                    <figcaption>Water Jump</figcaption>
                 </figure>
             </div>
 
