removed float left

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -52,27 +52,37 @@
             <div class="figure">
                 <figure>
                     <img src="images/img-one-sq-opt.jpg" alt="image-one" width="100">
-                    <figcaption>Forest Flow</figcaption>
+                    <figcaption>
+                        <p>Forest Flow</p>
+                    </figcaption>
                 </figure>
 
                 <figure>
                     <img src="images/img-two-sq-opt.jpg" alt="image-two" width="100">
-                    <figcaption>Grass Rapids</figcaption>
+                    <figcaption>
+                        <p>Grass Rapids</p>
+                    </figcaption>
                 </figure>
 
                 <figure>
                     <img src="images/img-three-sq-opt.jpg" alt="image-three" width="100">
-                    <figcaption>Mount Cruise</figcaption>
+                    <figcaption>
+                        <p>Mount Cruise</p>
+                    </figcaption>
                 </figure>
 
                 <figure>
                     <img src="images/img-four-sq-opt.jpg" alt="image-four" width="100">
-                    <figcaption>Rock Sliding</figcaption>
+                    <figcaption>
+                        <p>Rock Sliding</p>
+                    </figcaption>
                 </figure>
 
                 <figure>
                     <img src="images/img-five-sq-opt.jpg" alt="image-5" width="100">
-                    <figcaption>Water Jump</figcaption>
+                    <figcaption>
+                        <p>Water Jump</p>
+                    </figcaption>
                 </figure>
             </div>
 
