--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Contact Us Whitewater Rafting</title>
+  <title>Contact Us</title>
+  <!-- what is the point of this meta name? do I need it? -->
   <meta name="description"
     content="Contact us for more information.  Plan and enjoy the experience of rafting downstream with your friends and family!">
   <meta name="author" content="Kylene Hunter">
@@ -28,8 +29,6 @@
     <h1 class="hero">Contact Us</h1>
     <article class="contact">
       <p></p>
-      <p></p>
-      <p></p>
       <ul>
         <li>123 Main River Street</li>
         <li>Kolob, California</li>
@@ -39,36 +38,57 @@
       <p></p>
     </article>
 
-    <div class="form">
-      <div class="map">
-        <iframe
-          src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d41753.823366878874!2d-90.6100870508833!3d38.93834083995041!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1764377121370!5m2!1sen!2sus"
-          width="400" height="250" allowfullscreen="" loading="lazy"
-          referrerpolicy="no-referrer-when-downgrade"></iframe>
-      </div>
+    <div class="map-form">
+
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d41753.823366878874!2d-90.6100870508833!3d38.93834083995041!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1764377121370!5m2!1sen!2sus"
+        width="700" height="450" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
       <form>
-        <div>
-          <label for="username">Name:</label>
-          <input type="username" id="username" name="username">
-        </div>
-        <div>
-          <label for="email">Email:</label>
-          <input type="email" id="email" name="email">
-        </div>
+        <!-- <div class="userinfo"> -->
+        <label for="username">
+          Name:
+          <input type="text" id="username" name="username" placeholder="Name">
+        </label>
+
+        <label for="email">
+          Email:
+          <input type="email" id="useremail" name="useremail" placeholder="e-mail">
+        </label>
+        <!-- </div> -->
+
         <div class="purpose">
-          <label type="text" for="purpose">Message Purpose:</label>
-          <input type="radio" name="radio" id="radio">General Inquiry</input>
-          <input type="radio" name="radio" id="radio">Reservation Question</input>
-          <input type="radio" name="radio" id="radio">Website Suggestion</input>
+          <label type="text" for="purpose">
+            Message Purpose:
+          </label>
+          <div class="purpose_options">
+            <label>
+              <input type="radio" id="radio" name="radio">
+              General Inquiry
+            </label>
+            <label>
+              <input type="radio" id="radio" name="radio">
+              Reservation Question
+            </label>
+            <label>
+              <input type="radio" id="radio" name="radio">
+              Website Suggestion
+            </label>
+          </div>
         </div>
+
         <div>
           <label for="message"></label>
-          <textarea id="message" name="message" rows="4"></textarea>
+          <textarea id="message" name="message" rows="3" width="500px"></textarea>
         </div>
+
         <div>
-          <label><input type="checkbox" id="subscribe" name="subscribe">Please Subscribe me to the monthly
-            newsletter</label>
+          <label>
+            <input type="checkbox" id="subscribe" name="subscribe">Please Subscribe me to the monthly
+            newsletter
+          </label>
         </div>
+
         <div>
           <button type="submit">Get in Touch!</button>
         </div>
@@ -77,7 +97,7 @@
     <section>
       <h2>We are Here to Serve You</h2>
 
-      <div class="figure">
+      <div class="employees">
         <figure>
           <img src="images/emp-three-sq-opt.jpg" alt="image-three" width="100">
           <figcaption>
