--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -26,7 +26,7 @@
     </nav>
   </header>
   <main>
-    <h1 class="hero">Contact Us</h1>
+    <h1 class="hero">Whitewater Rafting</h1>
     <article class="contact">
       <p></p>
       <ul>
@@ -53,25 +53,25 @@
 
         <label for="email">
           Email:
-          <input type="email" id="useremail" name="useremail" placeholder="e-mail">
+          <input type="email" id="email" name="useremail" placeholder="e-mail">
         </label>
         <!-- </div> -->
 
         <div class="purpose">
-          <label type="text" for="purpose">
+          <label for="purpose">
             Message Purpose:
           </label>
           <div class="purpose_options">
             <label>
-              <input type="radio" id="radio" name="radio">
+              <input type="radio" name="radio">
               General Inquiry
             </label>
             <label>
-              <input type="radio" id="radio" name="radio">
+              <input type="radio" name="radio">
               Reservation Question
             </label>
             <label>
-              <input type="radio" id="radio" name="radio">
+              <input type="radio" name="radio">
               Website Suggestion
             </label>
           </div>
@@ -79,7 +79,7 @@
 
         <div>
           <label for="message"></label>
-          <textarea id="message" name="message" rows="3" width="500px"></textarea>
+          <textarea id="message" name="message" rows="3"></textarea>
         </div>
 
         <div>
