--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -57,25 +57,25 @@
         </label>
         <!-- </div> -->
 
-        <div class="purpose">
-          <label for="purpose">
-            Message Purpose:
+        <!-- <div class="purpose"> -->
+        <label>
+          Message Purpose:
+        </label>
+        <div id="purpose_options">
+          <label>
+            <input type="radio" name="radio">
+            General Inquiry
           </label>
-          <div class="purpose_options">
-            <label>
-              <input type="radio" name="radio">
-              General Inquiry
-            </label>
-            <label>
-              <input type="radio" name="radio">
-              Reservation Question
-            </label>
-            <label>
-              <input type="radio" name="radio">
-              Website Suggestion
-            </label>
-          </div>
+          <label>
+            <input type="radio" name="radio">
+            Reservation Question
+          </label>
+          <label>
+            <input type="radio" name="radio">
+            Website Suggestion
+          </label>
         </div>
+        <!-- </div> -->
 
         <div>
           <label for="message"></label>
